The start of additions of elements and classes.

--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,1 +1,45 @@
 //* Typeography
+
+//* HEADLINES 
+
+h1 {}
+
+h2 {}
+
+h3 {}
+
+h4 {}
+
+h5 {}
+
+h6 {}
+
+//* PARAGRAPH ELEMENTS
+
+p {}
+
+em {}
+
+address {}
+
+blockquote {}
+
+code {}
+
+//* LISTS
+
+ul {
+	li {}
+}
+
+ol {
+	li {}
+}
+
+//* SPECIAL CLASSES
+
+.hero-text {}
+
+.lead-in {}
+
+.legal {}
