Element and class additions.

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -1,1 +1,17 @@
 //* ARTICLE
+
+article {}
+
+.content {}
+
+.article-wrap {}
+
+.article-header {
+	h1 {}
+}
+
+.author-info {}
+
+.author-title {}
+
+.author-bio {}
