--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -36,3 +36,5 @@
 	-o-transition: $transition-property $transition-time $method;
 	transition: $transition-property $transition-time $method;
 }
+
+//* New
