--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -13,6 +13,30 @@
 	height: 0;
 }
 
+@mixin flex-container {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+}
+
+@mixin flex-item($width) {
+	-webkit-box-flex: 1; 
+	-moz-box-flex: 1; 
+	width: ($width);
+	-ms-flex: 1;
+	flex: 1;
+}
+
+@mixin flex-order($order) {
+	-webkit-box-ordinal-group: $order;
+	-moz-box-ordinal-group: $order;  
+	-ms-flex-order: $order;
+	-webkit-order: $order; 
+	order: $order;
+}
+
 @mixin hide {
 	clear: both !important;
 	height: 0 !important;
@@ -21,12 +45,12 @@
 	margin-bottom: 0 !important;
 	margin-left: 0 !important;
 	max-height: 0 !important;
-   padding-top: 0 !important;
-   padding-right: 0 !important;
-   padding-bottom: 0 !important;
-   padding-right: 0 !important;
-   visibility: hidden !important;
-   width: 0 !important;
+  padding-top: 0 !important;
+  padding-right: 0 !important;
+  padding-bottom: 0 !important;
+  padding-right: 0 !important;
+  visibility: hidden !important;
+  width: 0 !important;
 }
 
 @mixin transition($transition-property, $transition-time, $method) {
