--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -25,6 +25,9 @@ $color-sixth: #000000; //* Description
 
 //* COLORS - GRAYS 
 
+$black: #000;
+$white: #fff;
+
 $color-grey-prime: #222;
 $color-grey-second: #444;
 $color-grey-third: #666;
