--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,8 @@
 //* The SCSS VARIABLES
 
-
+//*===========================================
 //* FONTS
+//*===========================================
 
 $font-1: 'Helvetica-Neue', helvetica, sans-serif;
 $font-2: 'Helvetica-Neue', helvetica, sans-serif;
@@ -11,8 +12,9 @@ $font-sm: 50%;
 $font-md: 100%;
 $font-lg: 200%;
 
-
+//*===========================================
 //* COLORS
+//*===========================================
 
 $color-1: #000000; 			//* Description
 $color-1-hover: #000000;	//* Description
@@ -22,8 +24,12 @@ $color-4: #000000; 			//* Description
 $color-5: #000000; 			//* Description
 $color-6: #000000; 			//* Description
 
+$color-a: #000;
+$color-a-hover: #000;
 
+//*===========================================
 //* COLORS - GRAYS 
+//*===========================================
 
 $black: #000;
 $white: #fff;
@@ -33,8 +39,9 @@ $color-grey-2: #444;
 $color-grey-3: #666;
 $color-grey-4: #888;
 
-
+//*===========================================
 //* LAYOUT 
+//*===========================================
 
 $max-width: 72em;
 
@@ -50,7 +57,9 @@ $pad-double: $pad*2;
 $pad-half: $pad/2;
 $pad-quarter: $pad/4;
 
+//*===========================================
 //* BREAKPOINTS
+//*===========================================
 
 $bp-30m: 30em;		//* 480px
 $bp-40m: 40em;		//* 640px
@@ -60,7 +69,9 @@ $bp-60m: 60em;		//* 960px
 $bp-67m: 67.5em;	//* 1080px
 $bp-82m: 82.5em;	//* 1320px
 
+//*===========================================
 //* FROSTING 
+//*===========================================
 
 $text-shadow: 0 1px 2px rgba(0,0,0,.5);
 $box-shadow: 0 1px 2px rgba(0,0,0,.5);
