--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,1 +1,14 @@
 //* THE MAIN STYLESHEET
+
+@import "variables";
+@import "mixins";
+@import "globals";
+@import "structure";
+@import "type";
+@import "links";
+@import "header";
+@import "nav";
+@import "article";
+@import "sidebar";
+@import "footer";
+@import "forms"
