--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,8 +1,12 @@
-//* Typeography
+//*===========================================
+//*  TYPOGRAPHY
+//*===========================================
 
 html, body { font-family: helvetica, sans-serif; }
 
-//* HEADLINES 
+//*===========================================
+//*  HEADLINES
+//*=========================================== 
 
 h1 {}
 
@@ -16,7 +20,9 @@ h5 {}
 
 h6 {}
 
-//* PARAGRAPH ELEMENTS
+//*===========================================
+//*  PARAGRAPH
+//*===========================================
 
 p {}
 
@@ -38,7 +44,9 @@ ol {
 	li {}
 }
 
-//* SPECIAL CLASSES
+//*===========================================
+//*  SPECIAL CLASSES
+//*===========================================
 
 .hero-text {}
 
