--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,12 +1,10 @@
-//*===========================================
-//*  TYPOGRAPHY
-//*===========================================
+//* Typeography
 
 html, body { font-family: helvetica, sans-serif; }
 
-//*===========================================
-//*  HEADLINES
-//*=========================================== 
+* + * { font-size: calc(1em + 1vw); }
+
+//* HEADLINES 
 
 h1 {}
 
@@ -20,9 +18,7 @@ h5 {}
 
 h6 {}
 
-//*===========================================
-//*  PARAGRAPH
-//*===========================================
+//* PARAGRAPH ELEMENTS
 
 p {}
 
@@ -44,9 +40,7 @@ ol {
 	li {}
 }
 
-//*===========================================
-//*  SPECIAL CLASSES
-//*===========================================
+//* SPECIAL CLASSES
 
 .hero-text {}
 
