--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,6 @@
 
 @import "variables";
 @import "mixins";
-@import "globals";
 @import "structure";
 @import "type";
 @import "links";
@@ -11,4 +10,5 @@
 @import "article";
 @import "sidebar";
 @import "footer";
-@import "forms"
+@import "forms";
+@import "globals"
