--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -2,14 +2,23 @@
 //*  GLOBALS
 //*===========================================
 
-.cf {
-    *zoom: 1;
-}
-.cf:before, .cf:after {
+body, html {}
+
+* + * {}
+
+.clrfx:before, .clrfx:after {
     content: " "; /* 1 */
     display: table; /* 2 */
 }
 
-.cf:after {
-    clear: both;
+.clrfx:after { clear: both; }
+
+.clrfx { *zoom: 1; }
+
+
+.clearfloat {
+	font-size: 1px;
+	line-height: 0;
+	clear: both;
+	height: 0;
 }
