--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,1 +1,146 @@
-//* NAVIGATION
+//*===========================================
+//*  NAVIGATION
+//*===========================================
+
+nav { 
+	height: 40px;
+	width: 100%;
+	background: #455868;
+	font-size: 11pt;
+	font-family: 'PT Sans', Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	border-bottom: 2px solid #283744;
+	
+	ul {
+		padding: 0;
+		margin: 0 auto;
+		width: 600px;
+		height: 40px;
+	}
+	
+	li {
+		display: inline;
+		float: left;
+	}
+	
+	a {
+		color: #fff;
+		display: inline-block;
+		width: 100px;
+		text-align: center;
+		text-decoration: none;
+		line-height: 40px;
+		&:hover, :active {
+			background-color: #8c99a4;
+		}
+	}
+	
+	li a {
+		border-right: 1px solid #576979;
+		box-sizing: border-box;
+		-moz-box-sizing:border-box;
+		-webkit-box-sizing:border-box;
+	}
+	
+	li:last-child a {
+		border-right: 0;
+	}
+	
+	a#pull { display: none; }
+}
+
+@media screen and (max-width: 600px) {
+	nav {
+		height: auto;
+		
+		ul {
+			width: 100%;
+			display: block;
+			height: auto;
+		}
+		
+		li {
+			width: 50%;
+			float: left;
+			position: relative;
+		}
+		
+		li a {
+			border-bottom: 1px solid #576979;
+			border-right: 1px solid #576979;
+		}
+		
+		a {
+			text-align: left;
+			width: 100%;
+			text-indent: 25px; 
+		}
+		
+	}
+}
+
+@media only screen and (max-width:480px) {
+	nav {
+		border-bottom: 0;
+	}
+	
+	nav ul {
+		display: none;
+		height: auto;
+	}
+	
+	nav a#pull {
+		display: block;
+		background-color: #283744;
+		width: 100%;
+		position: relative;
+	}
+	
+	nav a#push {
+		display: block;
+		background-color: #283744;
+		width: 100%;
+		position: relative;
+		visibility: hidden;
+	}
+	
+	nav a#pull:after {
+		content: "";
+		background: url('../img/burger.gif') no-repeat;
+		width: 30px;
+		height: 30px;
+		display: inline-block;
+		position: absolute;
+		right: 15px;
+		top: 10px;
+	}
+	
+	nav a#push:after {
+		content: "";
+		background: url('../img/x-close.gif') no-repeat;
+		width: 30px;
+		height: 30px;
+		display: inline-block;
+		position: absolute;
+		right: 15px;
+		top: 10px;
+		visibility: hidden;
+	}
+	
+	#menu:not(:target) {
+    z-index: 1;
+    height: 0;
+  }
+  #menu:target {
+    display: block;
+    
+    nav a#push:after {
+	    visibility: visible;
+    }
+    
+    nav a#pull {
+	    display: none;
+    }
+  }
+}
