--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,3 @@
-//* The SCSS VARIABLES
-
 //*===========================================
 //* FONTS
 //*===========================================
@@ -10,20 +8,26 @@ $font-3: 'Courier', monospace;
 
 $font-sm: 80%;
 $font-md: 100%;
-$font-lg: 140%;
+$font-lg: 120%;
 
 //*===========================================
-//* COLORS
+//*  BRAND COLORS
 //*===========================================
 
-$color-1: #333333; 				//* Description
-$color-2: #666666; 				//* Description
-$color-3: #999999; 				//* Description
-$color-4: #CCCCCC; 				//* Description
-$color-5: #F4F4F4; 				//* Description
+$brand-color-1: #0B15FF;
+$brand-color-2: #FF580B;
+$brand-color-3: #9293B2;
+$brand-color-4: #8DCC74;
 
-$color-a: #000000;
-$color-a-hvr: #000000;
+//*===========================================
+//* GRAYS
+//*===========================================
+
+$color-1: #333333;
+$color-2: #666666;
+$color-3: #999999;
+$color-4: #CCCCCC;
+$color-5: #F4F4F4;
 
 $black: #000000;
 $white: #ffffff;
@@ -65,3 +69,4 @@ $bp-82m: 82.5em;					//* 1320px
 
 $text-shadow: 0 1px 2px rgba(0,0,0,.5);
 $box-shadow: 0 1px 2px rgba(0,0,0,.5);
+$opacity: 0.5;
