--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,10 +1,13 @@
-//* FORM ELEMENTS 
+//*  FORM ELEMENTS
+//*=========================================== 
 
 fieldset {}
 
 label {}
 
 textarea {}
+
+input {}
 
 input[type="text"] {}
 
