--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
-//* THE MAIN STYLESHEET
+//*  THE MAIN STYLESHEET
+//*===========================================
 
 @import "variables";
 @import "mixins";
