--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,20 +1,13 @@
-<<<<<<< Updated upstream
-//* Typeography
-
-html, body { font-family: helvetica, sans-serif; }
-
-* + * { font-size: calc(1em + 1vw); }
-
-//* HEADLINES 
-=======
 //*  TYPOGRAPHY
 //*===========================================
 
-html, body { font-family: helvetica, sans-serif; }
+html, body {
+	font-family: helvetica, sans-serif;
+	font-size: calc(1em + 1vw);
+}
 
 //*  HEADLINES
 //*=========================================== 
->>>>>>> Stashed changes
 
 h1 {}
 
@@ -28,12 +21,8 @@ h5 {}
 
 h6 {}
 
-<<<<<<< Updated upstream
-//* PARAGRAPH ELEMENTS
-=======
 //*  PARAGRAPH
 //*===========================================
->>>>>>> Stashed changes
 
 p {}
 
@@ -56,12 +45,8 @@ ol {
 	li {}
 }
 
-<<<<<<< Updated upstream
-//* SPECIAL CLASSES
-=======
 //*  SPECIAL CLASSES
 //*===========================================
->>>>>>> Stashed changes
 
 .hero-text {}
 
