--- a/css/styles.css
+++ b/css/styles.css
@@ -60,115 +60,31 @@
     float: left;
     width: 16.666666%; } }
 
-html, body {
-  font-family: helvetica, sans-serif; }
+.main, .side, .grid-item {
+  background-color: rgba(0, 0, 0, 0.2); }
 
-* + * {
+.cf {
+  font-size: 1px;
+  line-height: 0;
+  clear: both;
+  height: 0; }
+
+.cf {
+  *zoom: 1; }
+
+.cf:before, .cf:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */ }
+
+.cf:after {
+  clear: both; }
+
+html, body {
+  font-family: helvetica, sans-serif;
   font-size: calc(1em + 1vw); }
 
-nav {
-  height: 40px;
-  width: 100%;
-  background: #455868;
-  position: relative;
-  border-bottom: 2px solid #283744; }
-  nav ul {
-    padding: 0;
-    margin: 0 auto;
-    width: 600px;
-    height: 40px; }
-  nav li {
-    display: inline;
-    float: left; }
-  nav a {
-    color: #fff;
-    display: inline-block;
-    width: 100px;
-    text-align: center;
-    text-decoration: none;
-    line-height: 40px; }
-    nav a:hover, nav a :active {
-      background-color: #8c99a4; }
-  nav li a {
-    border-right: 1px solid #576979;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box; }
-  nav li:last-child a {
-    border-right: 0; }
-  nav a#pull {
-    display: none; }
-
-@media screen and (max-width: 600px) {
-  nav {
-    height: auto; }
-    nav ul {
-      width: 100%;
-      display: block;
-      height: auto; }
-    nav li {
-      width: 50%;
-      float: left;
-      position: relative; }
-    nav li a {
-      border-bottom: 1px solid #576979;
-      border-right: 1px solid #576979; }
-    nav a {
-      text-align: left;
-      width: 100%;
-      text-indent: 25px; } }
-@media only screen and (max-width: 480px) {
-  nav {
-    border-bottom: 0; }
-
-  nav ul {
-    display: none;
-    height: auto; }
-
-  nav a#pull {
-    display: block;
-    background-color: #283744;
-    width: 100%;
-    position: relative; }
-
-  nav a#push {
-    display: block;
-    background-color: #283744;
-    width: 100%;
-    position: relative;
-    visibility: hidden; }
-
-  nav a#pull:after {
-    content: "";
-    background: url("../img/burger.gif") no-repeat;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 15px;
-    top: 10px; }
-
-  nav a#push:after {
-    content: "";
-    background: url("../img/x-close.gif") no-repeat;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    position: absolute;
-    right: 15px;
-    top: 10px;
-    visibility: hidden; }
-
-  #menu:not(:target) {
-    z-index: 1;
-    height: 0; }
-
-  #menu:target {
-    display: block; }
-    #menu:target nav a#push:after {
-      visibility: visible; }
-    #menu:target nav a#pull {
-      display: none; } }
 .clrfx:before, .clrfx:after {
   content: " ";
   /* 1 */
