--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 //* FONTS
 //*===========================================
 
-$font-1: 'Helvetica-Neue', helvetica, sans-serif;
+$font-1: 'Helvetica', helvetica, sans-serif;
 $font-2: 'Georgia', 'Times', serif;
 $font-3: 'Courier', monospace;
 
@@ -17,7 +17,6 @@ $brand-color-2: #FF580B;
 $brand-color-3: #9293B2;
 $brand-color-4: #8DCC74;
 
-//*===========================================
 //* GRAYS
 //*===========================================
 
@@ -47,21 +46,25 @@ $pad-double: $pad*2;
 $pad-half: $pad/2;
 $pad-quarter: $pad/4;
 
-//* BREAKPOINTS
+//* BREAKPOINTS -- Primary
 //*===========================================
 
 $bp-30m: 30em;						//* 480px
-$bp-36m: 36em;						//* 576px
 $bp-40m: 40em;						//* 640px
 $bp-45m: 45em;						//* 720px
 $bp-50m: 50.25em;					//* 840px
 $bp-60m: 60em;						//* 960px
 $bp-67m: 67.5em;					//* 1080px
+
+//*  BREAKPOINTS -- Secondary
+//*===========================================
+
+$bp-36m: 36em;						//* 576px
 $bp-82m: 82.5em;					//* 1320px
 
 //* FROSTING 
 //*===========================================
 
-$text-shadow: 0 1px 2px rgba(0,0,0,.5);
-$box-shadow: 0 1px 2px rgba(0,0,0,.5);
+$text-shadow: 0 0 4px rgba(0,0,0,.5);
+$box-shadow: 0 0 4px rgba(0,0,0,.5);
 $opacity: 0.5;
