--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 72em;
   margin: 0 auto;
-  padding: 1%; }
+  padding: 0; }
 
 @media all and (min-width: 36em) {
   .layout-two-column .main {
@@ -21,7 +21,7 @@
   background-color: rgba(100, 30, 20, 0.2); }
 
 .grid {
-  margin: 0 -1%;
+  margin: 0;
   overflow: hidden; }
 
 .grid-item {
@@ -63,7 +63,7 @@
 .main, .side, .grid-item {
   background-color: rgba(0, 0, 0, 0.2); }
 
-.cf {
+.crflt {
   font-size: 1px;
   line-height: 0;
   clear: both;
@@ -74,9 +74,7 @@
 
 .cf:before, .cf:after {
   content: " ";
-  /* 1 */
-  display: table;
-  /* 2 */ }
+  display: table; }
 
 .cf:after {
   clear: both; }
@@ -84,6 +82,58 @@
 html, body {
   font-family: helvetica, sans-serif;
   font-size: calc(1em + 1vw); }
+
+nav {
+  height: auto;
+  width: 100%;
+  background: #000000;
+  font-size: 70%;
+  font-weight: normal;
+  position: relative; }
+  nav ul {
+    display: block;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+    width: 100%;
+    overflow: hidden; }
+  nav li {
+    position: relative;
+    width: 100%; }
+  nav a {
+    border-bottom: 1px solid #666666;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    color: #ffffff;
+    display: inline-block;
+    padding-left: 4%;
+    width: 100%;
+    text-align: left;
+    text-decoration: none;
+    line-height: 40px; }
+    nav a:hover, nav a :active {
+      background-color: #333333; }
+    nav a #pull {
+      display: none; }
+  nav a#pull {
+    display: block;
+    background-color: #000000;
+    width: 100%;
+    position: relative; }
+  nav a#pull:after {
+    content: "";
+    background: url("../img/burger.gif") no-repeat;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    position: absolute;
+    right: 15px;
+    top: 10px; }
+
+#menu:target {
+  z-index: 1;
+  height: 0; }
 
 .clrfx:before, .clrfx:after {
   content: " ";
