--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -16,3 +16,18 @@ article {}
 .author-title {}
 
 .author-bio {}
+
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	overflow: hidden;
+	max-width: 100%;
+	height: auto;
+	iframe { 
+	  position: absolute; 
+	  top: 0; 
+	  left: 0; 
+	  width: 100%; 
+	  height: 100%;
+	}
+}
