--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,62 +1,141 @@
 //*  MAIN NAV
 //*===========================================
 
-nav { 
-	height: auto;
-	width: 100%;
-	background: $black;
-	font-size: 70%;
-	font-weight: normal;
-	position: relative;	
-	ul {
-  	display: block;
-  	height: auto;
-		padding: 0;
-		margin: 0 auto;
-		width: 100%;
-		overflow: hidden;
-	}
-	li {
-		position: relative;
-		width: 100%;
-	}
-	a {
-  	border-bottom: 1px solid $color-2;
-  	box-sizing: border-box;
-		-moz-box-sizing:border-box;
-		-webkit-box-sizing:border-box;
-		color: $white;
-		display: inline-block;
-		padding-left: $pad-double;
-		width: 100%;
-		text-align: left;
-		text-decoration: none;
-		line-height: 40px;
-		&:hover, :active {
-			background-color: $color-1;
-		}
-		#pull { display: none; }
-	}
-	a#pull {
-		display: block;
-		background-color: $black;
-		width: 100%;
-		position: relative;
-	}
-	a#pull:after {
-		content: "";
-		background: url('../img/burger.gif') no-repeat;
-		width: 30px;
-		height: 30px;
-		display: inline-block;
-		position: absolute;
-		right: 15px;
-		top: 10px;
-	}
+#nav { 
+  position: relative;
+  text-align: left;
+  width: 100%;
+  li { 
+    list-style-type: none;
+    position: relative;
+  }
 }
-#menu:target {
-  z-index: 1;
-  height: 0;
+
+#nav:not( :target ) > a:first-of-type,
+#nav:target > a:last-of-type { 
+  display: inline-block;
+  background-color: $clr-1;
+  color: $white;
+  font-size: 80%;
+  padding: 1em;
+  &:before {
+    content: "\2261 ";
+    font-size: 140%;
+    position: relative;
+    top: 2px;
+  }
+  @media all and (min-width:$bp-36m) {
+    padding: .5em;
+  }
+  @media all and (min-width:$bp-45m) {
+    display: none;
+  }
+}
+
+.burger {
+  font-family: $fnt-1;
+}
+
+.burger:after {
+  content: '';
+  background-color: $white;
+  box-shadow: 0 12px 0 #fff, 0 24px 0 #fff; 
+  height: 2px;
+  position: absolute;
+  width: 40px;
+  right: 20px;
+  text-indent: -999em;
+  top: 26px;
+}
+
+#nav > a { display: none; }
+
+#nav li { 
+  list-style-type: none;
+  position: relative;
+}
+
+#nav > ul {
+  height: auto;
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  li {
+    background-color: $clr-1;
+    float: none; 
+    padding: .5em;
+    width: 100%;
+    text-align: left;
+    @media all and (min-width:$bp-45m) {
+//       float: left; 
+      text-align: left;
+//       width: 25%;
+    }
+    a {
+      color: $white;
+      display: block;
+      font-size: 80%;
+    }
+    &:hover { background-color: $black; }
+  }
+  @media all and (min-width:$bp-45m) {
+    display: block;
+//     overflow: auto;
+    position: relative;
+  }
+}
+
+#nav:target > ul { display: block; }
+
+#nav li ul { 
+  position: static;
+}
+
+#nav li:hover ul { 
+  display: block;
+  @media all and (min-width:$bp-45m) {
+    position: absolute;
+  }
+}
+
+#nav li ul {
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  li a { margin-left: 1em; }
+}
+
+@media all and (min-width:$bp-45m) {
+  #nav > a {
+    display: none;
+  }
+  #nav li {
+    position: relative;
+  }
+ 
+  /* first level */
+ 
+  #nav > ul {
+//     height: 3.75em;
+  }
+  #nav > ul > li {
+    width: 25%;
+    height: 100%;
+    float: left;
+  }
+ 
+  /* second level */
+ 
+  #nav li ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+  }
+  #nav li:hover ul {
+    display: block;
+  }
 }
 
 //*  SECONDARY NAV
